--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -1,14 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:walla="clr-namespace:ManageWalla"
+                    xmlns:gif="http://wpfanimatedgif.codeplex.com"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">
 
-        <ControlTemplate x:Key="templateRadioButton" TargetType="{x:Type RadioButton}">
+    <ControlTemplate x:Key="templateRadioButton" TargetType="{x:Type RadioButton}">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Rectangle x:Name="outerRectangle" StrokeThickness="0.5">
+            <Rectangle x:Name="outerRectangle" StrokeThickness="0.5" Opacity="0.6">
 
                 <Rectangle.Stroke>
-                    <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderBrush.Color}" />
+                    <SolidColorBrush x:Name="innerStrokeBrush" Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderBrush.Color}" />
                 </Rectangle.Stroke>
 
                 <Rectangle.Fill>
@@ -17,27 +19,31 @@
 
             </Rectangle>
 
-            <StackPanel Orientation="Horizontal" Margin="{TemplateBinding Margin}">
-                <Image x:Name="innerImage" Source="{DynamicResource radioNotSelectedImageSrc}" Height="20" Width="20" />
-                <ContentPresenter Margin="{TemplateBinding Margin}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <StackPanel Orientation="Horizontal" Margin="{TemplateBinding Margin}" VerticalAlignment="Center">
+                <Image x:Name="innerImage" Source="{DynamicResource radioNotSelectedImageSrc}" Height="10" Width="10" Margin="2" />
+                <ContentPresenter Margin="2" />
             </StackPanel>
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsChecked" Value="True">
                 <Setter TargetName="innerImage" Property="Source" Value="{DynamicResource radioSelectedImageSrc}" />
+                <Setter TargetName="outerRectangle" Property="Opacity" Value="1.0" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="outerRectangle" Property="Opacity" Value="1.0" />
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <ControlTemplate x:Key="templateRadioButtonPaneHeader" TargetType="{x:Type RadioButton}">
         <Grid>
-            <Rectangle x:Name="outerRectangle" StrokeThickness="1">
+            <Rectangle x:Name="outerRectangle" StrokeThickness="0">
                 <Rectangle.Stroke>
                     <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderBrush.Color}" />
                 </Rectangle.Stroke>
 
                 <Rectangle.Fill>
-                    <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background.Color}" />
+                    <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background.Color}" Opacity="0.5" />
                 </Rectangle.Fill>
             </Rectangle>
             <ContentPresenter Margin="{TemplateBinding Margin}" />
@@ -55,10 +61,43 @@
         -->
     </ControlTemplate>
 
+    <ControlTemplate x:Key="templateRefreshButton" TargetType="{x:Type Button}">
+        <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Image x:Name="imageRefresh" gif:ImageBehavior.AnimatedSource="{StaticResource refreshImageSelectedSrc}" Height="29"  />
+        </Grid>
+        <ControlTemplate.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver" Value="true" />
+                    <Condition Property="Tag">
+                        <Condition.Value>
+                            <sys:Boolean>False</sys:Boolean>
+                        </Condition.Value>
+                    </Condition>
+                </MultiTrigger.Conditions>
+                <MultiTrigger.Setters>
+                <Setter TargetName="imageRefresh" Property="gif:ImageBehavior.AnimatedSource" Value="{StaticResource refreshImageSrc}" />
+                </MultiTrigger.Setters>
+            </MultiTrigger>
+            <Trigger Property="Tag">
+                <Trigger.Value>
+                    <sys:Boolean>True</sys:Boolean>
+                </Trigger.Value>
+            <Setter TargetName="imageRefresh" Property="gif:ImageBehavior.AnimatedSource" Value="{StaticResource refreshImageRotatingSrc}" />
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+            <Setter TargetName="imageRefresh" Property="Height" Value="28" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+            <Setter TargetName="imageRefresh" Property="Opacity" Value="0.7" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
     <ControlTemplate x:Key="templateButton" TargetType="{x:Type Button}">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Rectangle x:Name="outerRectangle" StrokeThickness="1">
-
+            <Rectangle x:Name="outerRectangle" StrokeThickness="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderThickness.Top}">
+                
                 <Rectangle.Stroke>
                     <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Foreground.Color}" />
                 </Rectangle.Stroke>
@@ -73,11 +112,10 @@
 
         </Grid>
         <ControlTemplate.Triggers>
-
+<!--
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter TargetName="outerRectangle" Property="StrokeThickness" Value="1.5" />
             </Trigger>
-
             <Trigger Property="IsPressed" Value="True">
                 <Setter TargetName="outerRectangle" Property="StrokeThickness" Value="1.5" />
                 <Setter TargetName="outerRectangle" Property="RenderTransformOrigin" Value="0.5,0.5" />
@@ -87,15 +125,16 @@
                     </Setter.Value>
                 </Setter>
             </Trigger>
+            -->
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <ControlTemplate x:Key="templateToggleButton" TargetType="{x:Type ToggleButton}">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Rectangle x:Name="outerRectangle" StrokeThickness="1">
+            <Rectangle x:Name="outerRectangle" StrokeThickness="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderThickness.Top}">
 
                 <Rectangle.Stroke>
-                    <SolidColorBrush Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderBrush.Color}" />
+                    <SolidColorBrush x:Name="innerStrokeBrush" Color="{Binding RelativeSource={RelativeSource TemplatedParent},Path=BorderBrush.Color}" />
                 </Rectangle.Stroke>
 
                 <Rectangle.Fill>
@@ -103,18 +142,19 @@
                 </Rectangle.Fill>
             </Rectangle>
 
-            <ContentPresenter Margin="{TemplateBinding Padding}" />
+            <StackPanel Orientation="Horizontal" Margin="{TemplateBinding Margin}" VerticalAlignment="Center">
+                <Image x:Name="innerImage" Source="{DynamicResource radioNotSelectedImageSrc}" Height="10" Width="10" Margin="2" />
+                <ContentPresenter Margin="2" />
+            </StackPanel>
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter TargetName="outerRectangle" Property="StrokeThickness" Value="1.5" />
+                <Setter TargetName="innerImage" Property="Source" Value="{DynamicResource radioSelectedImageSrc}" />
+                <Setter TargetName="outerRectangle" Property="Opacity" Value="1.0" />
             </Trigger>
-
-            <!--
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter TargetName="outerRectangle" Property="StrokeThickness" Value="1.5" />
+                <Setter TargetName="outerRectangle" Property="Opacity" Value="1.0" />
             </Trigger>
-            -->
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
