--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -171,8 +171,11 @@
                     <VisualState x:Name="Normal" />
                     <VisualState x:Name="MouseOver">
                         <Storyboard>
+                            <ColorAnimation Storyboard.TargetProperty="(Path.Fill).(SolidColorBrush.Color)" Storyboard.TargetName="Arrow"
+                                            To="{StaticResource FontBorderColourSelected}" Duration="0:0:0.25" />
+                            <!--
                             <ColorAnimation Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" Storyboard.TargetName="Border"
-                                                To="{StaticResource ControlBackgroundMouseOverColour}" Duration="0:0:0.25" />
+                                                To="{StaticResource ControlBackgroundMouseOverColour}" Duration="0:0:0.25" /> -->
                         </Storyboard>
                     </VisualState>
                     
@@ -198,7 +201,7 @@
             <Border x:Name="Border"
                     Grid.ColumnSpan="2"
                     CornerRadius="0"
-                    BorderThickness="1"
+                    BorderThickness="0"
                     BorderBrush="{DynamicResource FontBorderBrush}"
                     Background="{DynamicResource EntryControlBackgroundBrush}">
             </Border>
